--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,5 @@
 aiohappyeyeballs==2.4.6
-aiohttp==3.11.12
+aiohttp==3.10.11
 aiosignal==1.3.2
 altair==5.5.0
 annotated-types==0.7.0
@@ -26,6 +26,7 @@ httpx-sse==0.4.0
 hyperframe==6.1.0
 idna==3.10
 importlib_metadata==7.2.1
+iniconfig==2.0.0
 Jinja2==3.1.5
 jiter==0.8.2
 jsonpatch==1.33
@@ -36,6 +37,8 @@ langchain==0.3.19
 langchain-community==0.3.18
 langchain-core==0.3.37
 langchain-openai==0.3.6
+langchain-pinecone==0.2.3
+langchain-tests==0.3.12
 langchain-text-splitters==0.3.6
 langsmith==0.3.9
 markdown-it-py==3.0.0
@@ -51,8 +54,10 @@ orjson==3.10.15
 packaging==23.2
 pandas==2.2.3
 pillow==10.4.0
-pinecone==6.0.1
+pinecone==5.4.2
+pinecone-plugin-inference==3.1.0
 pinecone-plugin-interface==0.0.7
+pluggy==1.5.0
 postgrest==0.19.3
 propcache==0.3.0
 protobuf==4.25.6
@@ -63,6 +68,9 @@ pydantic_core==2.27.2
 pydeck==0.9.1
 Pygments==2.19.1
 pypdf==5.3.0
+pytest==8.3.4
+pytest-asyncio==0.25.3
+pytest-socket==0.7.0
 python-dateutil==2.9.0.post0
 python-dotenv==1.0.1
 pytz==2025.1
@@ -83,6 +91,7 @@ streamlit==1.31.0
 StrEnum==0.4.15
 supabase==2.13.0
 supafunc==0.9.3
+syrupy==4.8.2
 tenacity==8.5.0
 tiktoken==0.9.0
 toml==0.10.2
