--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,5 @@
 aiohappyeyeballs==2.4.6
-aiohttp==3.10.11
+aiohttp
 aiosignal==1.3.2
 altair==5.5.0
 annotated-types==0.7.0
@@ -75,7 +75,7 @@ python-dateutil==2.9.0.post0
 python-dotenv==1.0.1
 pytz==2025.1
 PyYAML==6.0.2
-realtime==2.4.0
+realtime
 referencing==0.36.2
 regex==2024.11.6
 requests==2.31.0
@@ -104,7 +104,7 @@ tzlocal==5.3
 urllib3==2.3.0
 validators==0.34.0
 watchdog==6.0.0
-websockets==14.2
+websockets
 yarl==1.18.3
 zipp==3.21.0
 zstandard==0.23.0
